force-app/main/default/objects/Poin_Karyawan__c/Poin_Karyawan__c.object-meta.xml
<CustomObject>
    <description>menyimpan data penambahan poin yang diupload oleh admin</description>
    <label>Master Poin Penilaian Item</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Poin Penilaian Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>