force-app/main/default/objects/Poin_Karyawan__c/fields/Cuti_Poin_Karyawan__c.field-meta.xml
<CustomField>
    <fullName>Cuti_Poin_Karyawan__c</fullName>
    <label>Cuti &amp; Poin Karyawan</label>
    <referenceTo>Cuti_Poin_Karyawan__c</referenceTo>
    <relationshipName>Poin_Karyawan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>