force-app/main/default/objects/Poin_Karyawan__c/fields/Poin__c.field-meta.xml
<CustomField>
    <fullName>Poin__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Poin Achivment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>