force-app/main/default/objects/Poin_Karyawan__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>