force-app/main/default/objects/Poin_Karyawan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nama_Karyawan__c</columns>
    <columns>Cuti_Poin_Karyawan__c</columns>
    <columns>Score__c</columns>
    <columns>Poin__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>